# file_search

./: .env  README.md  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  pyproject.toml
files/: file.txt
